- Began implementing fullpageJS - Have to iron out some styling bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .app {
     position: relative;
 }
+
+/* .fp-table {
+    justify-content: unset !important;
+} */
+
+#fp-nav ul li a span, .fp-slidesNav ul li a span {
+    background-color: rgb(104, 104, 104) !important;
+}
